# Omnis

./: .gitignore  .gitmodules
.github/workflows/: macos-dmg.yml
docs/: macos-sdk-setup.md
docs/superpowers/plans/: 2026-05-04-mobile-ui-redesign.md
omnis-tui/: .dockerignore  Cargo.toml  Dockerfile.android  Dockerfile.macos  README.md  docker-compose.yml
omnis-tui/.cargo/: config.toml
omnis-tui/.github/workflows/: desktop-packages.yml  tui-release.yml
omnis-tui/scripts/: build-windows.ps1
omnis-tui/sdk/: README.txt
omnis-tui/src/: app.rs  error.rs  main.rs  theme.rs  types.rs
omnis-tui/src-tauri/: Cargo.toml  tauri.conf.json
omnis-tui/src-tauri/flatpak/: com.omnis.desktop.desktop  com.omnis.desktop.metainfo.xml  com.omnis.desktop.yml
omnis-tui/src-tauri/src/: lib.rs  main.rs
omnis-tui/src/components/: chat_list.rs  input_box.rs  message_list.rs  mod.rs  reply_preview.rs
omnis-tui/src/screens/: call.rs  chat.rs  home.rs  mod.rs  onboarding.rs  profile.rs  settings.rs
omnis-tui/src/services/: api.rs  attachment.rs  call.rs  crypto.rs  database.rs  mod.rs  notification.rs  storage.rs  tray.rs  websocket.rs
omnis-tui/web/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
omnis-tui/web/scripts/: tauri-runner.cjs
omnis-tui/web/src/app/: globals.css  layout.tsx  page.tsx
omnis-tui/web/src/components/: omnis-dashboard.tsx
omnis-tui/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  textarea.tsx
omnis-tui/web/src/lib/: omnis.ts
