[package]
name = "omnis-desktop"
version = "0.1.0"
description = "Omnis Desktop (Tauri)"
authors = ["Omnis"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "omnis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
uuid = { version = "1.18", features = ["v4"] }
base64 = "0.22"
